--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_redux_01302017",
+  "name": "react_demo",
   "version": "1.0.0",
   "description": "React and Redux class files",
   "scripts": {
